--- a/OverwatchProximityChat.Client/UserOptionWindow.xaml
+++ b/OverwatchProximityChat.Client/UserOptionWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="UserOptions" Height="200" Width="300"  ResizeMode="NoResize">
     <Grid>
-        <Slider x:Name="volumeSlider" HorizontalAlignment="Center" Margin="0,60,0,0" VerticalAlignment="Top" Width="175" Maximum="20" Minimum="-30" ValueChanged="volumeSlider_ValueChanged" SmallChange="0.5"/>
+        <Slider x:Name="volumeSlider" HorizontalAlignment="Center" Margin="0,60,0,0" VerticalAlignment="Top" Width="175" Maximum="20" Minimum="-30" ValueChanged="volumeSlider_ValueChanged" SmallChange="0.5" LargeChange="0.5"/>
         <Label x:Name="currentVolumeLabel" Content="Current Volume: " HorizontalAlignment="Left" Margin="62,34,0,0" VerticalAlignment="Top"/>
         <Label x:Name="currentVolumeContentLabel" Content="+0.0 db" HorizontalAlignment="Right" Margin="0,34,62,0" VerticalAlignment="Top"/>
 
